--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,4 +1,3 @@
-
 <div class="body"> 
   <!-- Start Site Header -->
   <header class="site-header">
@@ -125,20 +124,30 @@
                     </li>
                   <li><a href="contact.html">Contact</a></li>
                 </ul>
-            </nav>       
+            </nav>         
             <a href="#" class="visible-sm visible-xs" id="menu-toggle"><i class="fa fa-bars"></i></a>
       </div>
   </header>
   <!-- End Site Header -->
-
-    <div class="page-header parallax clearfix" style="background-image:url('/assets/church_test_pic1.jpg');">
-        <div class="title-subtitle-holder">
-          <div class="title-subtitle-holder-inner">
-          <h2>Events</h2>
-          </div>
-        </div>
+    <!-- Start Hero Slider -->
+    <div class="hero-slider heroflex flexslider clearfix" data-autoplay="yes" data-pagination="no" data-arrows="yes" data-style="fade" data-speed="7000" data-pause="yes">
+        <ul class="slides">
+          <li class="parallax" style="background-image:url('/assets/church_resize.png');">
+              <div class="flex-caption" data-appear-animation="fadeInRight" data-appear-animation-delay="500">
+                  <strong>God is the word</strong>
+                  <p>Lorem ipsum dolor sit met, conteturing elit. Phasellus pellentesque osure risus lacinia tristique Fusce sed massa</p>
+                </div>
+            </li>
+          <li class="parallax" style="background-image:url('/assets/church_resize.png');">
+              <div class="flex-caption" data-appear-animation="fadeInRight" data-appear-animation-delay="500">
+                  <strong>God is the word</strong>
+                  <p>Lorem ipsum dolor sit met, conteturing elit. Phasellus pellentesque osure risus lacinia tristique Fusce sed massa</p>
+                </div>
+            </li>
+        </ul>
+        <canvas id="canvas-animation"></canvas>
     </div>
-
+    <!-- End Hero Slider -->
     <!-- Lead Content -->
     <div class="lead-content clearfix">
       <div class="lead-content-wrapper">
@@ -205,7 +214,7 @@
                         <div class="element-block events-listing">
                             <div class="events-listing-header">
                                 <a href="events.html" class="pull-right basic-link">All Events</a>
-                                <h3 class="element-title">Upcoming Events</h3>
+                                <h3 class="element-title">More Events</h3>
                                 <hr class="sm">
                             </div>
                             <div class="events-listing-content">
@@ -306,34 +315,34 @@
                                     <a href="blog-post.html#comments" class="comments-go" title="10 comments"><i class="icon-dialogue-text"></i></a>
                                     <h4>Very latest</h4>
                                     </div>
-                                    <a href="blog-post.html" class="media-box post-thumb">
+                                    <a href="single-post.html" class="media-box post-thumb">
                                         <img src="http://placehold.it/800x500&amp;text=IMAGE+PLACEHOLDER" alt="">
                                     </a>
-                                    <h3 class="post-title"><a href="blog-post.html">Don't run behind the charm</a></h3>
+                                    <h3 class="post-title"><a href="single-post.html">Don't run behind the charm</a></h3>
                                     <div class="meta-data">by <a href="#">imithemes</a> on 25th August, 2014 in <a href="#">General</a></div>
                                     <p>Nulla consequat massa quis enim.Donec pede justo, fringilla vel, aliquet nec, vulputate eget...</p>
-                                    <p><a href="blog-post.html" class="basic-link">Continue reading</a></p>
+                                    <p><a href="single-post.html" class="basic-link">Continue reading</a></p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <ul class="blog-classic-listing">
                                     <li>
-                                        <a href="blog-post.html"><strong class="post-title">Hear my people’s cry for peace</strong></a>
+                                        <a href="single-post.html"><strong class="post-title">Hear my people’s cry for peace</strong></a>
                                         <div class="meta-data">by <a href="#">imithemes</a> on 25th August, 2014 in <a href="#">General</a></div>
                                         <p>Nulla consequat massa quis enim.Donec pede justo, fringilla vel, aliquet nec, vulputate eget...</p>
-                                      <p><a href="blog-post.html" class="basic-link">Continue reading</a></p>
+                                      <p><a href="single-post.html" class="basic-link">Continue reading</a></p>
                                   </li>
                                     <li>
-                                        <a href="blog-post.html"><strong class="post-title">Robin Williams: The death of our captain</strong></a>
+                                        <a href="single-post.html"><strong class="post-title">Robin Williams: The death of our captain</strong></a>
                                         <div class="meta-data">by <a href="#">imithemes</a> on 12th August, 2014 in <a href="#">General</a></div>
                                         <p>Nulla consequat massa quis enim.Donec pede justo, fringilla vel, aliquet nec, vulputate eget...</p>
-                                      <p><a href="blog-post.html" class="basic-link">Continue reading</a></p>
+                                      <p><a href="single-post.html" class="basic-link">Continue reading</a></p>
                                   </li>
                                     <li>
-                                        <a href="blog-post.html"><strong class="post-title">EPPN: It’s Time For Prison Reform</strong></a>
+                                        <a href="single-post.html"><strong class="post-title">EPPN: It’s Time For Prison Reform</strong></a>
                                         <div class="meta-data">by <a href="#">imithemes</a> on 31st July, 2014 in <a href="#">General</a></div>
                                         <p>Nulla consequat massa quis enim.Donec pede justo, fringilla vel, aliquet nec, vulputate eget...</p>
-                                      <p><a href="blog-post.html" class="basic-link">Continue reading</a></p>
+                                      <p><a href="single-post.html" class="basic-link">Continue reading</a></p>
                                   </li>
                                 </ul>
                             </div>
@@ -374,6 +383,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="spacer-20"></div>
             </div>
         </div>
     </div>
@@ -408,6 +418,7 @@
             </div>
         </div>
     </div>
+    
     <!-- Start site footer -->
     <footer class="site-footer">
         <div class="container">
@@ -490,7 +501,7 @@
   <div class="quick-info-overlay-left accent-bg">
         <a href="#" class="btn-close"><i class="icon-delete"></i></a>
       <div class="event-info">
-        <h3 class="event-title"> </h3>
+        <h3 class="event-title"></h3>
           <div class="event-address"></div>
             <a href="" class="btn btn-default btn-transparent btn-permalink">Full details</a>
         </div>
@@ -599,6 +610,3 @@
         </div>
     </div>
 </div>
-
-
-
