changed the logo to be 'west end church'.

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -6,7 +6,7 @@
             <h1>
                 <a href="index.html">
                     <span class="logo-icon"><i class="fa fa-heart"></i></span>
-                    <span class="logo-text">Adore <span>Church</span></span>
+                    <span class="logo-text">West End <span>Church</span></span>
                     <span class="logo-tagline"></span>
                 </a>
             </h1>
@@ -86,34 +86,6 @@
                         <li><a href="events-grid.html">Events Grid</a></li>
                         <li><a href="single-event.html">Single Event</a></li>
                       </ul>
-                    </li>
-                    <li class="megamenu"><a href="javascript:void(0)">Mega Menu</a>
-                      <ul class="dropdown">
-                          <li>
-                              <div class="megamenu-container container">
-                                <div class="row">
-                                  <div class="col-md-4 hidden-sm hidden-xs">
-                                      <span class="megamenu-sub-title">Put videos</span>
-                                            <div class="fw-video">
-                                                <iframe src="https://player.vimeo.com/video/37540860?title=0&amp;byline=0&amp;portrait=0" width="500" height="281"></iframe>
-                                            </div>
-                                    </div>
-                                    <div class="col-md-5"> <span class="megamenu-sub-title">Use for some content</span>
-                                <p>Nulla consequat massa quis enim.Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.Aenean vulputate eleifend tellus.</p>
-                                        </div>
-                                        <div class="col-md-3"> <span class="megamenu-sub-title">Use Custom Menus</span>
-                                            <ul class="sub-menu">
-                                                <li><a href="about.html">About Us</a></li>
-                                                <li><a href="404.html">404 Error</a></li>
-                                                <li><a href="contact.html">Contact Us</a></li>
-                                                <li><a href="typography.html">Typography</a></li>
-                                                <li><a href="shortcodes.html">Shortcodes</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
                     </li>
                     <li><a href="javascript:void(0)">Blog</a>
                         <ul class="dropdown">
