--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,186 @@
   </head>
 
   <body class="header-style3">
-    <%= yield %>
-  </body>
+		<div class="body"> 
+		  <!-- Start Site Header -->
+		  <header class="site-header">
+		      <div class="container for-navi">
+		          <div class="site-logo">
+		            <h1>
+		                <a href="index.html">
+		                    <span class="logo-icon"><i class="fa fa-heart"></i></span>
+		                    <span class="logo-text">West End <span>Church</span></span>
+		                    <span class="logo-tagline"></span>
+		                </a>
+		            </h1>
+		            </div>
+		            <!-- Main Navigation -->
+		            <nav class="main-navigation" role="navigation">
+		                <ul class="sf-menu">
+		                    <li><a href="javascript:void(0)">Home</a>
+		                      <ul class="dropdown">
+		                            <li><a href="index.html">Home Style 1</a></li>
+		                            <li><a href="index1.html">Home Style 2</a></li>
+		                        <li><a href="javascript:void(0)">Homepage Sliders</a>
+		                                <ul class="dropdown">
+		                                    <li><a href="index.html">FlexSlider</a></li>
+		                                    <li><a href="index-nivoslider.html">NivoSlider</a></li>
+		                                </ul>
+		                            </li>
+		                        <li><a href="javascript:void(0)">Header Styles</a>
+		                                <ul class="dropdown">
+		                                    <li><a href="index.html">Style 1</a></li>
+		                                    <li><a href="header-style2.html">Style 2</a></li>
+		                                    <li><a href="header-style3.html">Style 3</a></li>
+		                                    <li><a href="header-style4.html">Style 4</a></li>
+		                                    <li><a href="header-style5.html">Style 5</a></li>
+		                                </ul>
+		                            </li>
+		                        <li><a href="javascript:void(0)">Footer Styles</a>
+		                                <ul class="dropdown">
+		                                    <li><a href="index.html">Light</a></li>
+		                                    <li><a href="footer-dark.html">Dark</a></li>
+		                                </ul>
+		                            </li>
+		                      </ul>
+		                    </li>
+		                    <li><a href="javascript:void(0)">About us</a>
+		                      <ul class="dropdown">
+		                        <li><a href="about.html">Overview</a></li>
+		                        <li><a href="new-here.html">New Here?</a></li>
+		                        <li><a href="staff.html">Our Staff</a></li>
+		                        <li><a href="donate.html">Donate now</a></li>
+		                      </ul>
+		                    </li>
+		                    <li><a href="javascript:void(0)">Media</a>
+		                      <ul class="dropdown">
+		                            <li><a href="sermons.html">Sermons</a>
+		                                <ul class="dropdown">
+		                                    <li><a href="sermons-series.html">Sermons Series</a></li>
+		                                    <li><a href="sermons-list.html">Sermons List</a></li>
+		                                    <li><a href="single-sermon.html">Single Sermon</a></li>
+		                                </ul>
+		                            </li>
+		                            <li><a href="javascript:void(0)">Gallery</a>
+		                                <ul class="dropdown">
+		                                    <li><a href="gallery-2cols-filter.html">With Filter</a>
+		                                        <ul class="dropdown">
+		                                            <li><a href="gallery-2cols-filter.html">2 Cols</a></li>
+		                                            <li><a href="gallery-3cols-filter.html">3 Cols</a></li>
+		                                            <li><a href="gallery-4cols-filter.html">4 Cols</a></li>
+		                                        </ul>
+		                                    </li>
+		                                    <li><a href="gallery-2cols-pagination.html">With Pagination</a>
+		                                        <ul class="dropdown">
+		                                            <li><a href="gallery-2cols-pagination.html">2 Cols</a></li>
+		                                            <li><a href="gallery-3cols-pagination.html">3 Cols</a></li>
+		                                            <li><a href="gallery-4cols-pagination.html">4 Cols</a></li>
+		                                        </ul>
+		                                    </li>
+		                                    <li><a href="gallery-galleria.html">Galleria Gallery</a></li>
+		                                </ul>
+		                            </li>
+		                        </ul>
+		                    </li>
+		                    <li><a href="javascript:void(0)">Events</a>
+		                      <ul class="dropdown">
+		                        <li><a href="events.html">Events List</a></li>
+		                        <li><a href="events-calendar.html">Events Calendar</a></li>
+		                        <li><a href="events-grid.html">Events Grid</a></li>
+		                        <li><a href="single-event.html">Single Event</a></li>
+		                      </ul>
+		                    </li>
+		                    <li><a href="javascript:void(0)">Blog</a>
+		                        <ul class="dropdown">
+		                            <li><a href="blog-standard.html">Standard Blog</a></li>
+		                            <li><a href="blog-masonry.html">Masonry Blog</a></li>
+		                            <li><a href="blog-post.html">Single Post</a></li>
+		                        </ul>
+		                    </li>
+		                  <li><a href="contact.html">Contact</a></li>
+		                </ul>
+		            </nav>         
+		            <a href="#" class="visible-sm visible-xs" id="menu-toggle"><i class="fa fa-bars"></i></a>
+		      </div>
+		  </header>
+  		<!-- End Site Header -->
+    	<%= yield %>
+	    <!-- Start site footer -->
+	    <footer class="site-footer">
+	        <div class="container">
+	        <div class="site-footer-top">
+	              <div class="row">
+	                  <div class="col-md-4 widget footer_widget text_widget">
+	                        <h4>About our church</h4>
+	                        <hr class="sm">
+	                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Donec facilisis fermentum sem, ac viverra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Donec facilisis fermentum sem, ac viverra.</p>
+	                    </div>
+	                  <div class="col-md-4 widget footer_widget twitter_widget">
+	                      <h4>Twitter feeds</h4>
+	                        <hr class="sm">
+	                        <ul class="twitter-widget"></ul>
+	                </div>
+	                  <div class="col-md-4 widget footer_widget newsletter_widget">
+	                        <h4>News subscription</h4>
+	                        <hr class="sm">
+	                        <p>Subscribe to our newsletter in order to receive the latest new &amp; articles. We promise we won't spam your inbox!</p>
+	                        <div class="input-group">
+	                            <span class="input-group-addon">@</span>
+	                            <input type="text" class="form-control">
+	                            <span class="input-group-btn">
+	                            <button class="btn btn-primary" type="button">Go!</button>
+	                            </span>
+	                        </div>
+	                </div>
+	                </div>
+	            <!-- Quick Info -->
+	            <div class="quick-info">
+	                    <div class="row">
+	                        <div class="col-md-3 col-sm-6">
+	                            <h4><i class="fa fa-clock-o"></i> Service Times</h4>
+	                            <p>Sundays @ 10:00 am<br>Starting October 1</p>
+	                        </div>
+	                        <div class="col-md-3 col-sm-6">
+	                            <h4><i class="fa fa-map-marker"></i> Our Location</h4>
+	                            <p>777, Path to God<br>United States of America</p>
+	                        </div>
+	                        <div class="col-md-3 col-sm-6">
+	                            <h4><i class="fa fa-envelope"></i> Contact Info</h4>
+	                            <p>11 - 00 - 653240<br>email@adorechurch.com</p>
+	                        </div>
+	                        <div class="col-md-3 col-sm-6">
+	                            <h4><i class="fa fa-clock-o"></i> Socialize with us</h4>
+	                            <ul class="social-icons-colored inversed">
+	                                <li class="facebook"><a href="http://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
+	                                <li class="vimeo"><a href="http://www.vimeo.com/"><i class="fa fa-vimeo-square"></i></a></li>
+	                                <li class="twitter"><a href="http://twitter.com/"><i class="fa fa-twitter"></i></a></li>
+	                                <li class="googleplus"><a href="http://plus.google.com/"><i class="fa fa-google-plus"></i></a></li>
+	                            </ul>
+	                        </div>
+	                    </div>
+	              </div>
+	            <div class="site-footer-bottom">
+	                <div class="row">
+	                    <div class="col-md-6 col-sm-6 copyrights-coll">
+	                  &copy; 2014 Adore Church. All Rights Reserved
+	                  </div>
+	                    <div class="col-md-6 col-sm-6 copyrights-colr">
+	                  <nav class="footer-nav" role="navigation">
+	                            <ul>
+	                                <li><a href="index.html">Home</a></li>
+	                                <li><a href="donate.html">Donate now</a></li>
+	                                <li><a href="new-here.html">New here?</a></li>
+	                                <li><a href="contact.html">Contact</a></li>
+	                              </ul>
+	                          </nav>
+	                  </div>
+	                    </div>
+	                </div>
+	            </div>
+	        </div>
+	    </footer>
+	    <!-- End site footer -->
+	    <a id="back-to-top"><i class="fa fa-angle-double-up"></i></a>  
+		</div>
+	</body>
 </html>
