--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -146,23 +146,22 @@
 	                    <div class="row">
 	                        <div class="col-md-3 col-sm-6">
 	                            <h4><i class="fa fa-clock-o"></i> Service Times</h4>
-	                            <p>Sundays @ 10:00 am<br>Starting October 1</p>
+	                            <p>Sundays @ 11:00 am</p>
 	                        </div>
 	                        <div class="col-md-3 col-sm-6">
-	                            <h4><i class="fa fa-map-marker"></i> Our Location</h4>
-	                            <p>777, Path to God<br>United States of America</p>
+	                            <a href="https://www.google.com/maps/place/915+San+Jacinto+St,+Dallas,+TX+75202/@32.781965,-96.8065507,17z/data=!3m1!4b1!4m5!3m4!1s0x864e993d60b8d799:0x83bba102a24de58f!8m2!3d32.781965!4d-96.804362" target="_blank"><h4><i class="fa fa-map-marker"></i> Our Location</h4></a>
+	                            <p><a href="https://www.google.com/maps/place/915+San+Jacinto+St,+Dallas,+TX+75202/@32.781965,-96.8065507,17z/data=!3m1!4b1!4m5!3m4!1s0x864e993d60b8d799:0x83bba102a24de58f!8m2!3d32.781965!4d-96.804362" target="_blank">915 San Jacinto St<br>Dallas, TX 75202</a></p>
 	                        </div>
 	                        <div class="col-md-3 col-sm-6">
 	                            <h4><i class="fa fa-envelope"></i> Contact Info</h4>
-	                            <p>11 - 00 - 653240<br>email@adorechurch.com</p>
+	                            <p>(903)335-6329<br>dabidmiranda@gmail.com</p>
 	                        </div>
 	                        <div class="col-md-3 col-sm-6">
 	                            <h4><i class="fa fa-clock-o"></i> Socialize with us</h4>
 	                            <ul class="social-icons-colored inversed">
-	                                <li class="facebook"><a href="http://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
-	                                <li class="vimeo"><a href="http://www.vimeo.com/"><i class="fa fa-vimeo-square"></i></a></li>
-	                                <li class="twitter"><a href="http://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-	                                <li class="googleplus"><a href="http://plus.google.com/"><i class="fa fa-google-plus"></i></a></li>
+	                                <li class="facebook"><a href="https://www.facebook.com/WestEndStreets/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+	                                <li class="twitter"><a href="https://twitter.com/WestEndStreets/" target="_blank"><i class="fa fa-twitter"></i></a></li>
+	                                <li class="instagram"><a href="https://www.instagram.com/WestEndStreets/"><i class="fa fa-instagram"></i></a></li>
 	                            </ul>
 	                        </div>
 	                    </div>
