added actual pictures, and had to adjust the css so that they would size correctly.

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -25,23 +25,25 @@
                 <div class="col-md-4 col-sm-4 featured-block">
                     <h3>Our Community</h3>
                     <figure>
-                      <a href="about.html"><img src="http://placehold.it/800x500&amp;text=IMAGE+PLACEHOLDER" alt="Our Community"></a>
+                      <a href="about.html"><img src="https://s3.amazonaws.com/window-faith-email-pics/david_prayer.jpg" alt="Our Community" width="360" height="225"></a>
                   </figure>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Donec facilisis fermentum sem, ac viverra.</p>
+                  <p>If you take a look at West End or simply walk through it, you'll feel tension. It's interesting. You feel people's uneasiness in response to their surroundings: poverty,</p>
                 </div>
                 <div class="col-md-4 col-sm-4 featured-block">
                     <h3>Church Mission</h3>
                     <figure>
-                      <a href="donate.html"><img src="http://placehold.it/800x500&amp;text=IMAGE+PLACEHOLDER" alt="Our Community"></a>
+                      <a href="donate.html">
+                        <img src="https://s3.amazonaws.com/window-faith-email-pics/steven_nguyen_prayer.jpg" alt="Our Community" width="360" height="225">
+                      </a>
                   </figure>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Donec facilisis fermentum sem, ac viverra.</p>
+                  <p>To bring people to Jesus and develop them to Christlike maturity, and to help bring social justice and cultural renewal to Dallas and, through it, to the world.</p>
                 </div>
                 <div class="col-md-4 col-sm-4 featured-block">
-                    <h3>Join a Group</h3>
+                    <h3>Join Us!</h3>
                     <figure>
-                      <a href="new-here.html"><img src="http://placehold.it/800x500&amp;text=IMAGE+PLACEHOLDER" alt="Our Community"></a>
+                      <a href="new-here.html"><img src="https://s3.amazonaws.com/window-faith-email-pics/west_end_church_family.jpg" alt="Our Community" width="360" height="225"></a>
                   </figure>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Donec facilisis fermentum sem, ac viverra.</p>
+                  <p>If you are looking for somewhere to serve, join us! Together we have started a church that meets at the Rosa Parks Plaza Sundays and Wednesdays.</p>
                 </div>
             </div>
       </div>
