--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -121,7 +121,7 @@
 	                  <div class="col-md-4 widget footer_widget text_widget">
 	                        <h4>About our church</h4>
 	                        <hr class="sm">
-	                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Donec facilisis fermentum sem, ac viverra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Donec facilisis fermentum sem, ac viverra.</p>
+	                        <p>We are a mere group of friends, who gather together with a common goal, to meet the needs of the people of Downtown Dallas.</p>
 	                    </div>
 	                  <div class="col-md-4 widget footer_widget twitter_widget">
 	                      <h4>Twitter feeds</h4>
