a new banner. might not actually use it tho..

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -7,7 +7,7 @@
               <p>Lorem ipsum dolor sit met, conteturing elit. Phasellus pellentesque osure risus lacinia tristique Fusce sed massa</p>
             </div>
         </li>
-      <li class="parallax" style="background-image:url('/assets/church_resize.png');">
+      <li class="parallax" style="background-image:url('/assets/westend_banner_resize.jpg');">
           <div class="flex-caption" data-appear-animation="fadeInRight" data-appear-animation-delay="500">
               <strong>God is the word</strong>
               <p>Lorem ipsum dolor sit met, conteturing elit. Phasellus pellentesque osure risus lacinia tristique Fusce sed massa</p>
