filled that photo gallery bar on the home page with some pictures from facebook.

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -183,25 +183,25 @@
 <!-- Gallery updates -->
 <div class="gallery-updates cols5 clearfix">
   <ul>
-      <li class="format-image"><a href="http://placehold.it/600x600&amp;text=IMAGE+PLACEHOLDER" data-rel="prettyPhoto" class="media-box"><img src="http://placehold.it/600x600&amp;text=IMAGE+PLACEHOLDER" alt=""></a></li>
+      <li class="format-image"><a href="https://s3.amazonaws.com/window-faith-email-pics/david_with_jacket.jpg" data-rel="prettyPhoto" class="media-box"><img src="https://s3.amazonaws.com/window-faith-email-pics/david_with_jacket.jpg" alt="" height="300"></a></li>
       <li class="format-standard">
           <div class="flexslider galleryflex" data-autoplay="yes" data-pagination="yes" data-arrows="no" data-style="slide" data-pause="yes">
                 <ul class="slides">
-                    <li class="item"><a href="http://placehold.it/600x600&amp;text=IMAGE+PLACEHOLDER" data-rel="prettyPhoto[postname1]"><img src="http://placehold.it/600x600&amp;text=IMAGE+PLACEHOLDER" alt=""></a></li>
-                    <li class="item"><a href="http://placehold.it/800x500&amp;text=IMAGE+PLACEHOLDER" data-rel="prettyPhoto[postname1]"><img src="http://placehold.it/600x600&amp;text=IMAGE+PLACEHOLDER" alt=""></a></li>
+                    <li class="item"><a href="https://s3.amazonaws.com/window-faith-email-pics/scott_preach.jpg" data-rel="prettyPhoto[postname1]"><img src="https://s3.amazonaws.com/window-faith-email-pics/scott_preach.jpg" alt="" height="300"></a></li>
+                    <li class="item"><a href="https://s3.amazonaws.com/window-faith-email-pics/westend_food.jpg" data-rel="prettyPhoto[postname1]"><img src="https://s3.amazonaws.com/window-faith-email-pics/westend_food.jpg" alt="" height="300"></a></li>
               </ul>
             </div>
         </li>
-      <li class="format-image"><a href="http://placehold.it/600x600&amp;text=IMAGE+PLACEHOLDER" data-rel="prettyPhoto" class="media-box"><img src="http://placehold.it/600x600&amp;text=IMAGE+PLACEHOLDER" alt=""></a></li>
+      <li class="format-image"><a href="https://s3.amazonaws.com/window-faith-email-pics/westend_worship.jpg" data-rel="prettyPhoto" class="media-box"><img src="https://s3.amazonaws.com/window-faith-email-pics/westend_worship.jpg" alt="" height="300"></a></li>
       <li class="format-standard">
           <div class="flexslider galleryflex" data-autoplay="yes" data-pagination="yes" data-arrows="no" data-style="fade" data-speed="4000" data-pause="yes">
                 <ul class="slides">
-                    <li class="item"><a href="http://placehold.it/600x600&amp;text=IMAGE+PLACEHOLDER" data-rel="prettyPhoto[postname2]"><img src="http://placehold.it/600x600&amp;text=IMAGE+PLACEHOLDER" alt=""></a></li>
-                    <li class="item"><a href="http://placehold.it/400x400&amp;text=IMAGE+PLACEHOLDER" data-rel="prettyPhoto[postname2]"><img src="http://placehold.it/600x600&amp;text=IMAGE+PLACEHOLDER" alt=""></a></li>
+                    <li class="item"><a href="https://s3.amazonaws.com/window-faith-email-pics/westend_worship2.jpg" data-rel="prettyPhoto[postname2]"><img src="https://s3.amazonaws.com/window-faith-email-pics/westend_worship2.jpg" alt="" height="300"></a></li>
+                    <li class="item"><a href="https://s3.amazonaws.com/window-faith-email-pics/westend_smiles.jpg" data-rel="prettyPhoto[postname2]"><img src="https://s3.amazonaws.com/window-faith-email-pics/westend_smiles.jpg" alt="" height="300" width="300"></a></li>
               </ul>
             </div>
         </li>
-      <li class="format-video"><a href="http://vimeo.com/37540860" data-rel="prettyPhoto" class="media-box"><img src="http://placehold.it/600x600&amp;text=IMAGE+PLACEHOLDER" alt=""></a></li>
+      <li class="format-video"><a href="https://www.youtube.com/watch?v=KR1cefEEqdc" data-rel="prettyPhoto" class="media-box"><img src="https://s3.amazonaws.com/window-faith-email-pics/david_and_bro_baptism.png" alt="" height="300"></a></li>
     </ul>
     <div class="gallery-updates-overlay">
       <div class="container">
