--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -3,14 +3,14 @@
     <ul class="slides">
       <li class="parallax" style="background-image:url('/assets/church_resize.png');">
           <div class="flex-caption" data-appear-animation="fadeInRight" data-appear-animation-delay="500">
-              <strong>God is the word</strong>
-              <p>Lorem ipsum dolor sit met, conteturing elit. Phasellus pellentesque osure risus lacinia tristique Fusce sed massa</p>
+              <strong>1 Corinthians 6:14</strong>
+              <p>"By his power God raised the Lord from the dead, and he will raise us also"</p>
             </div>
         </li>
       <li class="parallax" style="background-image:url('/assets/westend_banner_resize.jpg');">
           <div class="flex-caption" data-appear-animation="fadeInRight" data-appear-animation-delay="500">
-              <strong>God is the word</strong>
-              <p>Lorem ipsum dolor sit met, conteturing elit. Phasellus pellentesque osure risus lacinia tristique Fusce sed massa</p>
+              <strong>Ephesians 2:8</strong>
+              <p>"God saved you by his grace when you believed. And you can’t take credit for this; it is a gift from God." </p>
             </div>
         </li>
     </ul>
