this is all I'll do in this branch. I'll make other branches for events, twitter api, and email subscription.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,33 +25,7 @@
 		            <!-- Main Navigation -->
 		            <nav class="main-navigation" role="navigation">
 		                <ul class="sf-menu">
-		                    <li><a href="javascript:void(0)">Home</a>
-		                      <ul class="dropdown">
-		                            <li><a href="index.html">Home Style 1</a></li>
-		                            <li><a href="index1.html">Home Style 2</a></li>
-		                        <li><a href="javascript:void(0)">Homepage Sliders</a>
-		                                <ul class="dropdown">
-		                                    <li><a href="index.html">FlexSlider</a></li>
-		                                    <li><a href="index-nivoslider.html">NivoSlider</a></li>
-		                                </ul>
-		                            </li>
-		                        <li><a href="javascript:void(0)">Header Styles</a>
-		                                <ul class="dropdown">
-		                                    <li><a href="index.html">Style 1</a></li>
-		                                    <li><a href="header-style2.html">Style 2</a></li>
-		                                    <li><a href="header-style3.html">Style 3</a></li>
-		                                    <li><a href="header-style4.html">Style 4</a></li>
-		                                    <li><a href="header-style5.html">Style 5</a></li>
-		                                </ul>
-		                            </li>
-		                        <li><a href="javascript:void(0)">Footer Styles</a>
-		                                <ul class="dropdown">
-		                                    <li><a href="index.html">Light</a></li>
-		                                    <li><a href="footer-dark.html">Dark</a></li>
-		                                </ul>
-		                            </li>
-		                      </ul>
-		                    </li>
+		                		<li><a href="home.html">Home</a></li>
 		                    <li><a href="javascript:void(0)">About us</a>
 		                      <ul class="dropdown">
 		                        <li><a href="about.html">Overview</a></li>
@@ -90,21 +64,7 @@
 		                            </li>
 		                        </ul>
 		                    </li>
-		                    <li><a href="javascript:void(0)">Events</a>
-		                      <ul class="dropdown">
-		                        <li><a href="events.html">Events List</a></li>
-		                        <li><a href="events-calendar.html">Events Calendar</a></li>
-		                        <li><a href="events-grid.html">Events Grid</a></li>
-		                        <li><a href="single-event.html">Single Event</a></li>
-		                      </ul>
-		                    </li>
-		                    <li><a href="javascript:void(0)">Blog</a>
-		                        <ul class="dropdown">
-		                            <li><a href="blog-standard.html">Standard Blog</a></li>
-		                            <li><a href="blog-masonry.html">Masonry Blog</a></li>
-		                            <li><a href="blog-post.html">Single Post</a></li>
-		                        </ul>
-		                    </li>
+		                    <li><a href="home.html">Events</a></li>
 		                  <li><a href="contact.html">Contact</a></li>
 		                </ul>
 		            </nav>         
