--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -893,7 +893,7 @@ label {
 	position:relative;
 }
 .flexslider{
-	background:url(../images/loader.gif) no-repeat scroll center center;
+	background:url(/assets/loader.gif) no-repeat scroll center center;
 }
 .flexslider .slides{
 	margin:0;
@@ -1888,7 +1888,7 @@ body.boxed .body{
 }
 .event-list-item-date .event-date{
 	border: 2px solid #f8f8f8;
-	background-image:url(../images/dashed.png);
+	background-image:url(/assets/dashed.png);
 	text-align:center;
 	height:100px;
 	width:95px;
