couldn't get the background-image:url to work inline with erb, so I moved it to the style.css.erb file for now.

--- a/app/assets/stylesheets/style.css.erb
+++ b/app/assets/stylesheets/style.css.erb
@@ -1900,6 +1900,15 @@ body.boxed .body{
 	-o-transition:all 0.3s ease 0.2s;
 	transition:all 0.3s ease 0.1s;
 }
+
+#slide-1{
+	background-image:url('<%= asset_path("church_resize.png") %> ');
+}
+
+#slide-2{
+	background-image:url('<%= asset_path("westend_banner_resize.jpg") %> ');
+}
+
 .smaller-cont .event-list-item-date .event-date{
 	width:70px;
 	height:75px;
