--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,13 +1,13 @@
 <!-- Start Hero Slider -->
 <div class="hero-slider heroflex flexslider clearfix" data-autoplay="yes" data-pagination="no" data-arrows="yes" data-style="fade" data-speed="7000" data-pause="yes">
     <ul class="slides">
-      <li class="parallax" style="background-image:url('/assets/church_resize.png');">
+      <li class="parallax" id="slide-1">
           <div class="flex-caption" data-appear-animation="fadeInRight" data-appear-animation-delay="500">
               <strong>1 Corinthians 6:14</strong>
               <p>"By his power God raised the Lord from the dead, and he will raise us also"</p>
             </div>
         </li>
-      <li class="parallax" style="background-image:url('/assets/westend_banner_resize.jpg');">
+      <li class="parallax" id="slide-2">
           <div class="flex-caption" data-appear-animation="fadeInRight" data-appear-animation-delay="500">
               <strong>Ephesians 2:8</strong>
               <p>"God saved you by his grace when you believed. And you can’t take credit for this; it is a gift from God." </p>
