--- a/app/assets/stylesheets/line-icons.css.erb
+++ b/app/assets/stylesheets/line-icons.css.erb
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: "outlined-iconset";
-  src:url("fonts/outlined-iconset.eot");
-  src:url("fonts/outlined-iconset.eot?#iefix") format("embedded-opentype"),
-    url("fonts/outlined-iconset.woff") format("woff"),
-    url("fonts/outlined-iconset.ttf") format("truetype"),
-    url("fonts/outlined-iconset.svg#outlined-iconset") format("svg");
+  src:url('<%= asset_path("fonts/outlined-iconset.eot") %> ');
+  src:url('<%= asset_path("fonts/outlined-iconset.eot?#iefix") %> ') format("embedded-opentype"),
+    url('<%= asset_path("fonts/outlined-iconset.woff") %> ') format("woff"),
+    url('<%= asset_path("fonts/outlined-iconset.ttf") %> ') format("truetype"),
+    url('<%= asset_path("fonts/outlined-iconset.svg#outlined-iconset") %> ') format("svg");
   font-weight: normal;
   font-style: normal;
 
