removed turbolinks because the homepage slider wouldn't work whenever you routed to it from another page unless you refreshed the page. Also linked to the contact page in the header.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application' %>
     <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css' rel='stylesheet' integrity='sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1' crossorigin='anonymous'>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.6.3/jquery.flexslider.js" type="text/javascript"></script>
@@ -71,7 +71,7 @@
 		                        </ul>
 		                    </li>
 		                    <li><a href="home.html">Events</a></li>
-		                  <li><a href="contact.html">Contact</a></li>
+		                  <li><%= link_to "Contact", contact_path %></li>
 		                </ul>
 		            </nav>         
 		            <a href="#" class="visible-sm visible-xs" id="menu-toggle"><i class="fa fa-bars"></i></a>
