made the address on the contact page a clickable link that takes you to the google maps page for this address.

--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -21,7 +21,7 @@
                     	<h2>Our Location</h2>
                     	<hr class="sm">
                     	<h4 class="short accent-color">Texas, Unites States</h4>
-                    	<p>915 San Jacinto St<br>Dallas, TX 75202<br><a href="mailto:dabidmiranda@gmail.com">dabidmiranda@gmail.com</a></p>
+                    	<p><a href="https://www.google.com/maps/place/915+San+Jacinto+St,+Dallas,+TX+75202/@32.781965,-96.8065507,17z/data=!3m1!4b1!4m5!3m4!1s0x864e993d60b8d799:0x83bba102a24de58f!8m2!3d32.781965!4d-96.804362" target="_blank">915 San Jacinto St<br>Dallas, TX 75202</a><br><a href="mailto:dabidmiranda@gmail.com">dabidmiranda@gmail.com</a></p>
                    	</div>
                     <div class="col-md-8 col-sm-7">
 											<!-- Change the width and height values to suit you best -->
