hooked up the link to events in the navbar.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,7 +70,7 @@
 		                            </li>
 		                        </ul>
 		                    </li>
-		                    <li><a href="home.html">Events</a></li>
+		                    <li><%= link_to "Events", events_path %></li>
 		                  <li><%= link_to "Contact", contact_path %></li>
 		                </ul>
 		            </nav>         
