hooked up most of the events index page, so that most of everything is dynamic. Still need to remove some template stuff that I'm not going to use.

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,25 +1,83 @@
-<p id="notice"><%= notice %></p>
+  <!-- End Site Header -->
+    <!-- Start Page Header -->
+    <div class="page-header parallax clearfix" style="background-color: #3bafda;">
+        <div class="title-subtitle-holder">
+          <div class="title-subtitle-holder-inner">
+          <h2>Events</h2>
+          </div>
+        </div>
+    </div>
+    <!-- End Page Header -->
+    <!-- Breadcrumbs -->
+    <div class="lgray-bg breadcrumb-cont">
+      <div class="container">
+            <ol class="breadcrumb">
+              <li><a href="index.html">Home</a></li>
+              <li class="active">Events</li>
+            </ol>
+        </div>
+    </div>
+    <!-- Start Body Content -->
+    <div class="main" role="main">
+      <div id="content" class="content full">
+          <div class="container">
+              <div class="row">
+                    <div class="col-md-3 col-sm-3 events-list-sidebar">
+                      <div class="event-page-cal">
+                          <span class="month"><%= I18n.t("date.abbr_month_names")[@today.mon] %></span>
+                            <span class="year"><%= @today.year %></span>
+                            <a href="javascript:void(0)" class="actions left"><i class="fa fa-angle-left"></i></a>
+                            <a href="javascript:void(0)" class="actions right"><i class="fa fa-angle-right"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-md-9 col-sm-9">
+                        <div class="element-block events-listing">
+                            <div class="events-listing-header">
+                                <ul class="sort-source" data-sort-id="events" data-option-key="filter">
+                                    <li data-option-value="*" class="active"><a href="#">Show All</a></li>
+                                    <li data-option-value=".fests"><a href="#">Fests</a></li>
+                                    <li data-option-value=".meetings"><a href="#">Meetings</a></li>
+                                    <li data-option-value=".prayers"><a href="#">Prayers</a></li>
+                                    <li data-option-value=".celebrations"><a href="#">Celebrations</a></li>
+                                </ul>
+                            </div>
+                            <ul class="events-listing-content sort-destination isotope-events" data-sort-id="events">
 
-<h1>Events</h1>
+                              <% @events.each do |event| %>
+                                <li class="event-list-item event-dynamic grid-item prayers celebrations">
+                                  <div class="event-list-item-date">
+                                      <span class="event-date">
+                                          <span class="event-day"><%= event.start_date.day %></span>
+                                          <span class="event-month"><%= I18n.t("date.abbr_month_names")[event.start_date.mon] %>, <%= event.start_date.year %></span>
+                                        </span>
+                                    </div>
+                                    <div class="event-list-item-info">
+                                      <div class="lined-info">
+                                          <h4><%= link_to event.name, event_path(event), class: "event-title" %></h4>
+                                        </div>
+                                      <div class="lined-info">
+                                          <span class="meta-data"><i class="fa fa-clock-o"></i> <%= event.start_date.strftime("%A") %>, <span class="event-time"><%= event.start_time.strftime("%I:%M%p") %></span></span>
+                                        </div>
+                                      <div class="lined-info event-location">
+                                          <span class="meta-data"><a href=<%= event.directions_url %> target="_blank"><i class="fa fa-map-marker"></i> <span class="event-location-address"><%= event.address %>, <%= event.city %> <%= event.zip_code %></span></a></span>
+                                        </div>
+                                    </div>
+                                    <div class="event-list-item-actions">
+                                      <a href="#" class="btn btn-default btn-transparent event-tickets event-register-button">Register</a>
+                                      <ul class="action-buttons">
+                                          <li title="Share event"><a href="#" data-trigger="focus" data-placement="top" data-content="" data-toggle="popover" data-original-title="Share Event" class="event-share-link"><i class="icon-share"></i></a></li>
+                                          <li title="Get directions" class="hidden-xs"><a href="#" class="cover-overlay-trigger event-direction-link"><i class="icon-compass"></i></a></li>
+                                          <li title="Contact event manager"><a href="#" data-toggle="modal" data-target="#Econtact" class="event-contact-link"><i class="icon-mail"></i></a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                              <% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @events.each do |event| %>
-      <tr>
-        <td><%= link_to 'Show', event %></td>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Event', new_event_path %>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Body Content -->
