--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -12,7 +12,7 @@
     <div class="lgray-bg breadcrumb-cont">
       <div class="container">
             <ol class="breadcrumb">
-              <li><a href="index.html">Home</a></li>
+              <li><%= link_to "Home", home_path %></li>
               <li class="active">Events</li>
             </ol>
         </div>
