--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -84,93 +84,46 @@
                 <div class="col-md-8 col-sm-7">
                     <div class="element-block events-listing">
                         <div class="events-listing-header">
-                            <a href="events.html" class="pull-right basic-link">All Events</a>
+                            <%= link_to "All Events", events_path, class:"pull-right basic-link" %>
                             <h3 class="element-title">More Events</h3>
                             <hr class="sm">
                         </div>
-                        <div class="events-listing-content">
-                            <div class="event-list-item event-dynamic">
-                              <div class="event-list-item-date">
-                                  <span class="event-date">
-                                      <span class="event-day">22</span>
-                                      <span class="event-month">Sep, 14</span>
-                                    </span>
-                                </div>
-                                <div class="event-list-item-info">
-                                  <div class="lined-info">
-                                      <h4><a href="single-event.html" class="event-title">Water Baptism</a></h4>
-                                    </div>
-                                  <div class="lined-info">
-                                      <span class="meta-data"><i class="fa fa-clock-o"></i> Monday, <span class="event-time">10:00 AM</span></span>
-                                    </div>
-                                  <div class="lined-info event-location">
-                                      <span class="meta-data"><i class="fa fa-map-marker"></i> <span class="event-location-address">State Route, Madison US</span></span>
-                                    </div>
-                                </div>
-                                <div class="event-list-item-actions">
-                                  <a href="#" class="btn btn-default btn-transparent event-tickets event-register-button">Register</a>
-                                  <ul class="action-buttons">
-                                      <li title="Share event"><a href="#" data-trigger="focus" data-placement="top" data-content="" data-toggle="popover" data-original-title="Share Event" class="event-share-link"><i class="icon-share"></i></a></li>
-                                      <li title="Get directions" class="hidden-xs"><a href="#" class="cover-overlay-trigger event-direction-link"><i class="icon-compass"></i></a></li>
-                                      <li title="Contact event manager"><a href="#" data-toggle="modal" data-target="#Econtact" class="event-contact-link"><i class="icon-mail"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="event-list-item event-dynamic">
-                              <div class="event-list-item-date">
-                                  <span class="event-date">
-                                      <span class="event-day">27</span>
-                                      <span class="event-month">Sep, 14</span>
-                                    </span>
-                                </div>
-                                <div class="event-list-item-info">
-                                  <div class="lined-info">
-                                      <h4><a href="single-event.html" class="event-title">Sunday Meet Up</a></h4>
-                                    </div>
-                                  <div class="lined-info">
-                                      <span class="meta-data"><i class="fa fa-clock-o"></i> Sunday, <span class="event-time">05:00 PM</span></span>
-                                    </div>
-                                  <div class="lined-info event-location">
-                                      <span class="meta-data"><i class="fa fa-map-marker"></i> <span class="event-location-address">55 Warren Street, New York</span></span>
-                                    </div>
-                                </div>
-                                <div class="event-list-item-actions">
-                                  <a href="#" class="btn btn-default btn-transparent event-tickets event-register-button">Register</a>
-                                  <ul class="action-buttons">
-                                      <li title="Share event"><a href="#" data-trigger="focus" data-placement="top" data-content="" data-toggle="popover" data-original-title="Share Event" class="event-share-link"><i class="icon-share"></i></a></li>
-                                      <li title="Get directions" class="hidden-xs"><a href="#" class="cover-overlay-trigger event-direction-link"><i class="icon-compass"></i></a></li>
-                                      <li title="Contact event manager"><a href="#" data-toggle="modal" data-target="#Econtact" class="event-contact-link"><i class="icon-mail"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="event-list-item event-dynamic">
-                              <div class="event-list-item-date">
-                                  <span class="event-date">
-                                      <span class="event-day">06</span>
-                                      <span class="event-month">Feb, 15</span>
-                                    </span>
-                                </div>
-                                <div class="event-list-item-info">
-                                  <div class="lined-info">
-                                      <h4><a href="single-event.html" class="event-title">Holy shift: Strategic think</a></h4>
-                                    </div>
-                                  <div class="lined-info">
-                                      <span class="meta-data"><i class="fa fa-clock-o"></i> Monday, <span class="event-time">10:00 AM</span></span>
-                                    </div>
-                                  <div class="lined-info event-location">
-                                      <span class="meta-data"><i class="fa fa-map-marker"></i> <span class="event-location-address">123 Broadway, New York, NY</span></span>
-                                    </div>
-                                </div>
-                                <div class="event-list-item-actions">
-                                  <a href="#" class="btn btn-default btn-transparent event-tickets event-register-button">Register</a>
-                                  <ul class="action-buttons">
-                                      <li title="Share event"><a href="#" data-trigger="focus" data-placement="top" data-content="" data-toggle="popover" data-original-title="Share Event" class="event-share-link"><i class="icon-share"></i></a></li>
-                                      <li title="Get directions" class="hidden-xs"><a href="#" class="cover-overlay-trigger event-direction-link"><i class="icon-compass"></i></a></li>
-                                      <li title="Contact event manager"><a href="#" data-toggle="modal" data-target="#Econtact" class="event-contact-link"><i class="icon-mail"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
+
+
+                        <% @events.each do |event| %>
+                          <div class="events-listing-content">
+                              <div class="event-list-item event-dynamic">
+                                <div class="event-list-item-date">
+                                    <span class="event-date">
+                                        <span class="event-day"><%= event.start_date.day %></span>
+                                        <span class="event-month"><%= I18n.t("date.abbr_month_names")[event.start_date.mon] %>, <%= event.start_date.year %></span>
+                                      </span>
+                                  </div>
+                                  <div class="event-list-item-info">
+                                    <div class="lined-info">
+                                        <h4><%= link_to event.name, event_path(event), class: "event-title" %></h4>
+                                      </div>
+                                    <div class="lined-info">
+                                        <span class="meta-data"><i class="fa fa-clock-o"></i> <%= event.start_date.strftime("%A") %>, <span class="event-time"><%= event.start_time.strftime("%I:%M%p") %></span></span>
+                                      </div>
+                                    <div class="lined-info event-location">
+                                        <span class="meta-data"><a href=<%= event.directions_url %> target="_blank"><i class="fa fa-map-marker"></i> <span class="event-location-address"><%= event.address %>, <%= event.city %> <%= event.zip_code %></span></a></span>
+                                      </div>
+                                  </div>
+                                  <div class="event-list-item-actions">
+                                    <ul class="action-buttons">
+                                        <li title="Share event"><a href="#" data-trigger="focus" data-placement="top" data-content="" data-toggle="popover" data-original-title="Share Event" class="event-share-link"><i class="icon-share"></i></a></li>
+                                        <li title="Get directions" class="hidden-xs"><a href="#" class="cover-overlay-trigger event-direction-link"><i class="icon-compass"></i></a></li>
+                                        <li title="Contact event manager"><a href="#" data-toggle="modal" data-target="#Econtact" class="event-contact-link"><i class="icon-mail"></i></a></li>
+                                      </ul>
+                                  </div>
+                              </div>
+                          </div>
+                        <% end %>
+
+
+
+
                     </div>
                 </div>
             </div>
