--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -26,7 +26,7 @@
     	<div class="single-event-content event-list-item event-dynamic">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3 col-sm-4">
+                    <div class="col-md-4 col-sm-5">
                     	<h2 class="event-title"><%= @event.name %></h2>
                         <span class="event-date hidden"><%= @event.start_time.strftime("%A, %b. %d, %Y") %></span>
   						<span class="hidden">From <span class="event-time"><%= @event.start_time.strftime("%I:%M%p") %></span> to <%= @event.end_time.strftime("%I:%M%p") %></span>
@@ -44,9 +44,9 @@
                         </ul></li>
                         </ul>
                     </div>
-                    <div class="col-md-9 col-sm-8">
+                    <div class="col-md-8 col-sm-7">
                     	<div class="event-details">
-                   			<img src="http://placehold.it/800x500&amp;text=IMAGE+PLACEHOLDER" alt="" class="temp-thumbnail">
+                        <%= image_tag event_image_path(@event), alt:"Event Pic", class: "temp-thumbnail img-responsive" %>
                         <div class="clearfix"></div>
                         <div class="col-md-12">
                         	<p><%= @event.description %></p>
