--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,17 +21,17 @@
 		      <div class="container for-navi">
 		          <div class="site-logo">
 		            <h1>
-		                <a href="index.html">
+		                <%= link_to home_path do %>
 		                    <span class="logo-icon"><i class="fa fa-heart"></i></span>
 		                    <span class="logo-text">West End <span>Church</span></span>
 		                    <span class="logo-tagline"></span>
-		                </a>
+		                <% end %>
 		            </h1>
 		            </div>
 		            <!-- Main Navigation -->
 		            <nav class="main-navigation" role="navigation">
 		                <ul class="sf-menu">
-		                		<li><a href="home.html">Home</a></li>
+		                		<li><%= link_to "Home", home_path %></li>
 		                    <li><a href="javascript:void(0)">About us</a>
 		                      <ul class="dropdown">
 		                        <li><a href="about.html">Overview</a></li>
